Import of KOSTAS/Net-Traces-TSH-0.02 from CPAN.
gitpan-cpan-distribution: Net-Traces-TSH
gitpan-cpan-version:      0.02
gitpan-cpan-path:         KOSTAS/Net-Traces-TSH-0.02.tar.gz
gitpan-cpan-author:       KOSTAS
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,4 +1,9 @@
 Revision history for Perl extension Net::Traces::TSH.
 
+0.02  Wed Mar 10
+	- Application pt.pl 0.01 released
+	- Additional tests released
+        - POD editorial changes
+
 0.01  Mon Mar  1
 	- original public release
