--- a/Changes
+++ b/Changes
@@ -1,15 +1,22 @@
 Revision history for Perl extension Net::Traces::TSH.
 
-0.03  Sat Mar 20
+0.04  Tue Mar 30 2004
+	- Minor updates in the process_trace()/tcpdump text generation
+        - Code and POD updates
+        - Added t/sample.tcpdump
+	- Added META.yml
+        - Additional tests released
+
+0.03  Sat Mar 20 2004
         - Code and POD updates 
 	- pt.pl 0.03 released
         - Added t/sample.tsh trace
         - Additional tests released 
 
-0.02  Wed Mar 10
+0.02  Wed Mar 10 2004
 	- Application pt.pl 0.01 released
 	- Additional tests released
         - POD editorial changes
 
-0.01  Mon Mar  1
+0.01  Mon Mar  1 2004
 	- original public release
