--- a/Changes
+++ b/Changes
@@ -1,7 +1,32 @@
 Revision history for Perl extension Net::Traces::TSH.
 
+0.06 Sat Apr 17 2004
+   - Distribution fix: The tarball comes with sample output files
+     generated on the development platform (perl v5.8.0 built for
+     i386-linux-thread-multi).  These files are used by the module
+     tests to validate that the code works correctly regardless of
+     platform.  For example, t/process_trace.t processes t/sample.t
+     and generates t/sample.tcpdump.  When a user installs
+     Net::Traces::TSH on another machine, the module tests verify that
+     given the same input (t/sample.tsh) the code produces the same
+     output (t/sample.tcpdump).
+       Testing this on Linux and UNIX systems is very easy: simply use
+     _diff_.  On systems that lack diff, the tests fail (ver. 0.04 and
+     0.05).  I'd prefer to use a standard "Perl way" to do this, thus
+     avoiding to rely on external programs.  Unfortunately , at this
+     time Algorithm::Diff is not a core module so I cannot rely on
+     that either.  Currently I employ 30 tests to check that the code
+     does produce the same results, so users of all platforms have
+     assurance that the code works correctly, but a context diff would
+     make most of them redundant.  If the platform has diff, it is
+     used as well (31st test).
+   - Added t/sample.csv
+   - Added documentation/sample-summary.pod, and annotated version of
+     t/sample.csv
+   - Additional tests released
+
 0.05 Wed Mar 31 2004
-   - Ditribution fixes: META.yml, t/sample.tcpdump
+   - Distribution fixes: META.yml, t/sample.tcpdump
 
 0.04 Tue Mar 30 2004
    - Minor updates in the process_trace()/tcpdump text generation
