--- a/Changes
+++ b/Changes
@@ -1,11 +1,21 @@
 Revision history for Perl extension Net::Traces::TSH.
 
+0.07 Sun Apr 25 2004
+   - Same code as in 0.06, with minor editorial POD changes.
+   - Distribution fix: CPAN testers reported that ver. 0.07 fails to
+     pass its own tests on MSWin platforms (see comments below,
+     ver. 0.06).  Since this may lead users to believe that the code
+     does not work correctly, I decided to skip context diffs between
+     the distribution-bundled sample output files (t/sample.csv and
+     t/sample.tcpdump) and the locally generated ones on MSWin
+     platforms for now, and continue searching for an alternative.
+
 0.06 Sat Apr 17 2004
    - Distribution fix: The tarball comes with sample output files
      generated on the development platform (perl v5.8.0 built for
      i386-linux-thread-multi).  These files are used by the module
      tests to validate that the code works correctly regardless of
-     platform.  For example, t/process_trace.t processes t/sample.t
+     platform.  For example, t/process_trace.t processes t/sample.tsh
      and generates t/sample.tcpdump.  When a user installs
      Net::Traces::TSH on another machine, the module tests verify that
      given the same input (t/sample.tsh) the code produces the same
@@ -13,7 +23,7 @@ Revision history for Perl extension Net::Traces::TSH.
        Testing this on Linux and UNIX systems is very easy: simply use
      _diff_.  On systems that lack diff, the tests fail (ver. 0.04 and
      0.05).  I'd prefer to use a standard "Perl way" to do this, thus
-     avoiding to rely on external programs.  Unfortunately , at this
+     avoiding to rely on external programs.  Unfortunately, at this
      time Algorithm::Diff is not a core module so I cannot rely on
      that either.  Currently I employ 30 tests to check that the code
      does produce the same results, so users of all platforms have
