--- a/README
+++ b/README
@@ -22,27 +22,27 @@ INSTALLATION
     consider using Andreas Koenig's CPAN module for all your CPAN module
     installation needs.
 
-    If you have downloaded the "Net::Traces::TSH" tarball, decompress and
-    untar it, and proceed as follows:
-
-     perl Makefile.PL
-     make
-     make test
-     make install
-
     To find out more about installing CPAN modules type
 
      perldoc perlmodinstall
 
     at the command prompt.
 
+    If you have already downloaded the "Net::Traces::TSH" tarball,
+    decompress and untar it, and proceed as follows:
+
+     perl Makefile.PL
+     make
+     make test
+     make install
+
 DESCRIPTION
     With "Net::Traces::TSH" you can analyze Internet Protocol (IP) packet
     traces in time sequenced headers (TSH), a binary network trace format.
     Daily TSH traces are available from the NLANR PMA web site. Each 44-byte
     TSH record corresponds to an IP packet passing by a monitoring point.
-    Although there are no explicit section delimiters, each record is
-    composed of three rather distinct sections.
+    Although there are no explicit delimiters, each record is composed of
+    three sections.
 
     Time and Interface
         The first section uses 8 bytes to store the time (with microsecond
@@ -107,122 +107,120 @@ DESCRIPTION
     comma separated values (CSV), a platform independent text format.
 
   Data Structures
-    The data collected from a trace is stored is a hash called
-    %Trace_Summary, the main data structure in "Net::Traces::TSH".
-    %Trace_Summary is initialized and populated by process_trace. The
-    recommended way to get the trace summary information is by calling
-    write_trace_summary, which stores the contents of %Trace_Summary in a
-    CSV-formated text file, as shown in SYNOPSIS.
+    The data collected from a trace is stored is a hash called %Trace, the
+    main data structure in "Net::Traces::TSH". %Trace is initialized and
+    populated by process_trace. The recommended way to get the trace summary
+    information is by calling write_trace_summary, which stores the contents
+    of %Trace in a CSV-formated text file, as shown in SYNOPSIS.
 
-    %Trace_Summary is not exported by default and was not designed to be
-    accessed directly by user code. However, if you know what you are doing,
-    you can get a reference to %Trace_Summary by calling
-    get_trace_summary_href. If you choose to do so, the following
-    subsections explain how you can access some of the information stored in
-    %Trace_Summary. See also Taking advantage of %Trace_Summary.
+    %Trace is not exported by default and was not designed to be accessed
+    directly by user code. However, if you know what you are doing, you can
+    get a reference to %Trace by calling get_trace_summary_href. If you
+    choose to do so, the following subsections explain how you can access
+    some of the information stored in %Trace. See also Taking advantage of
+    %Trace.
 
    General Trace Information
-    $Trace_Summary{filename}
+    $Trace{filename}
         The trace FILENAME.
 
-    $Trace_Summary{log}
+    $Trace{summary}
         The trace summary FILENAME.
 
-    $Trace_Summary{starts}
+    $Trace{starts}
         The first trace timestamp, in seconds, as it is recorded in the
         trace.
 
-    $Trace_Summary{ends}
-        The last trace timestamp, in seconds, after being normalized.
-        Essentially, the number of seconds since $Trace_Summary{starts}.
+    $Trace{ends}
+        The last trace timestamp, in seconds, after being "normalized".
+        Essentially, the number of seconds since $Trace{starts}.
 
-    $Trace_Summary{records}
+    $Trace{records}
         Number of records in the trace.
 
-    $Trace_Summary{unidirectional}
+    $Trace{unidirectional}
         True, if each interface carries unidirectional traffic.
 
         False, if there is bidirectional traffic in at least one interface.
 
         "undef" if traffic directionality was not examined.
 
-    $Trace_Summary{Link Capacity}
+    $Trace{'Link Capacity'}
         The capacity of the monitored link in bits per second (b/s).
 
    Internet Protocol
-    $Trace_Summary{IP}{'Total Packets'}
-    $Trace_Summary{IP}{'Total Bytes'}
+    $Trace{IP}{'Total Packets'}
+    $Trace{IP}{'Total Bytes'}
         Number of IP packets and bytes, respectively, in the trace. The
-        number of IP packets should be equal to the number of records in the
+        number of IP packets should equal the number of records in the
         trace.
 
    Fragmentation
-    $Trace_Summary{IP}{'DF Packets'}
-    $Trace_Summary{IP}{'DF Bytes'}
+    $Trace{IP}{'DF Packets'}
+    $Trace{IP}{'DF Bytes'}
         Number of IP packets and bytes, respectively, requesting no
         fragmentation ('Do not Fragment').
 
-    $Trace_Summary{IP}{'MF Packets'}
-    $Trace_Summary{IP}{'MF Bytes'}
+    $Trace{IP}{'MF Packets'}
+    $Trace{IP}{'MF Bytes'}
         Number of IP packets and bytes, respectively, indicating that 'More
         Fragments' follow.
 
    Differentiated Services
-    $Trace_Summary{IP}{'Normal Packets'}
-    $Trace_Summary{IP}{'Normal Bytes'}
+    $Trace{IP}{'Normal Packets'}
+    $Trace{IP}{'Normal Bytes'}
         Number of IP packets and bytes, respectively, requesting no
         particular treatment (best effort traffic). None of the DiffServ and
         ECN bits are set.
 
-    $Trace_Summary{IP}{'Class Selector Packets'}
-    $Trace_Summary{IP}{'Class Selector Bytes'}
+    $Trace{IP}{'Class Selector Packets'}
+    $Trace{IP}{'Class Selector Bytes'}
         Number of IP packets and bytes, respectively, with Class Selector
         bits set.
 
-    $Trace_Summary{IP}{'AF PHB Packets'}
-    $Trace_Summary{IP}{'AF PHB Bytes'}
+    $Trace{IP}{'AF PHB Packets'}
+    $Trace{IP}{'AF PHB Bytes'}
         Number of IP packets and bytes, respectively, requesting Assured
         Forwarding Per-Hop Behavior (PHB).
 
-    $Trace_Summary{IP}{'EF PHB Packets'}
-    $Trace_Summary{IP}{'EF PHB Bytes'}
+    $Trace{IP}{'EF PHB Packets'}
+    $Trace{IP}{'EF PHB Bytes'}
         Number of IP packets and bytes, respectively, requesting Expedited
         Forwarding Per-Hop Behavior (PHB)
 
    Explicit Congestion Notification
-    $Trace_Summary{IP}{'ECT Packets'}
-    $Trace_Summary{IP}{'ECT Bytes'}
+    $Trace{IP}{'ECT Packets'}
+    $Trace{IP}{'ECT Bytes'}
         Number of IP packets and bytes, respectively, with either of the ECT
         bits set. These packets should be carrying ECN-aware traffic.
 
-    $Trace_Summary{IP}{'CE Packets'}
-    $Trace_Summary{IP}{'CE Bytes'}
+    $Trace{IP}{'CE Packets'}
+    $Trace{IP}{'CE Bytes'}
         Number of IP packets and bytes, respectively, with the CE bit set.
         These packets carry ECN-capable traffic that has been marked at an
         ECN-aware router.
 
    Transport Protocols
     Besides the summary information about the trace itself and statistics
-    about IP, %Trace_Summary maintains information about the transport
-    protocols present in the trace. Based on the IP header, %Trace_Summary
-    maintains the same statistics mentioned in the previous section for TCP,
-    UDP and other transport protocols with an IANA assigned number. For
-    example,
+    about IP, %Trace maintains information about the transport protocols
+    present in the trace. Based on the IP header, %Trace maintains the same
+    statistics mentioned in the previous section for TCP, UDP and other
+    transport protocols with an IANA assigned number. For example,
 
-    $Trace_Summary{Transport}{TCP}{'Total Packets'}
-    $Trace_Summary{Transport}{TCP}{'Total Bytes'}
+    $Trace{Transport}{TCP}{'Total Packets'}
+    $Trace{Transport}{TCP}{'Total Bytes'}
         Number of TCP segments and the corresponding bytes (including the IP
         and TCP headers) in the trace.
 
-    $Trace_Summary{Transport}{UDP}{'Total Packets'}
-    $Trace_Summary{Transport}{UDP}{'Total Bytes'}
+    $Trace{Transport}{UDP}{'Total Packets'}
+    $Trace{Transport}{UDP}{'Total Bytes'}
         Ditto, for UDP.
 
-    $Trace_Summary{Transport}{ICMP}{'DF Packets'}
-    $Trace_Summary{Transport}{ICMP}{'DF Bytes'}
+    $Trace{Transport}{ICMP}{'DF Packets'}
+    $Trace{Transport}{ICMP}{'DF Bytes'}
         Number of ICMP packets and bytes, respectively, with the DF bit set.
 
-  Taking advantage of %Trace_Summary
+  Taking advantage of %Trace
     The following example creates the trace summary file only if the TCP
     traffic in terms of bytes accounts for more than 90% of the total IP
     traffic in the trace.
@@ -238,7 +236,7 @@ DESCRIPTION
      #
      process_trace "some.tsh";
 
-     # Get a reference to %Trace_Summary
+     # Get a reference to %Trace
      #
      my $ts_href = get_trace_summary_href;
 
@@ -256,22 +254,23 @@ FUNCTIONS
   date_of
       date_of FILENAME
 
-    Converts the epoch timestamp, typically part of a TSH trace FILENAME
-    downloaded from http://pma.nlanr.net/Traces to a human readable date. If
-    the FILENAME contains a valid timestamp, date_of() returns the
-    corresponding GMT date as a human readable string. Otherwise, it returns
-    *false*.
-
-    For example,
+    TSH traces downloaded from the NLANR PMA trace repository typically
+    contain a timestamp as part of their filename. date_of() converts the
+    timestamp to a human readable format. That is, if FILENAME contains a
+    valid timestamp, date_of() returns the corresponding GMT date as a human
+    readable string. For example,
 
      date_of 'ODU-1073132115.tsh'
 
     returns "Sat Jan 3 12:15:15 2004 GMT".
 
+    If the FILENAME does not contain a timestamp date_of() returns *false*.
+
   get_IP_address
      get_IP_address INTEGER
 
-    Converts a 32-bit integer to an IP address. For example,
+    Converts a 32-bit integer to an IP address in dotted decimal notation.
+    For example,
 
      get_IP_address(167772172)
 
@@ -280,7 +279,7 @@ FUNCTIONS
   get_trace_summary_href
      get_trace_summary_href
 
-    Returns a hash *reference* to %Trace_Summary.
+    Returns a hash *reference* to %Trace.
 
   process_trace
      process_trace FILENAME
@@ -288,7 +287,7 @@ FUNCTIONS
      process_trace FILENAME, NUMBER, TEXT_FILENAME
 
     If called in a void context process_trace() examines the binary TSH
-    trace stored in FILENAME, and populates %Trace_Summary.
+    trace stored in FILENAME, and populates %Trace.
 
     NUMBER specifies the capacity of the monitored link in bits per second
     (b/s). If not specified, it defaults to 155,520,000.
@@ -411,12 +410,12 @@ FUNCTIONS
      write_trace_summary FILENAME
      write_trace_summary
 
-    Writes the contents of %Trace_Summary to FILENAME in comma separated
-    values (CSV) format, a platform independent text format, excellent for
-    storing tabular data. CSV is both human-readable and suitable for
-    further analysis using Perl or direct import to a spreadsheet
-    application. Although not required, it is recommended that FILENAME
-    should have a *.csv* suffix.
+    Writes the contents of %Trace to FILENAME in comma separated values
+    (CSV) format, a platform independent text format, excellent for storing
+    tabular data. CSV is both human-readable and suitable for further
+    analysis using Perl or direct import to a spreadsheet application.
+    Although not required, it is recommended that FILENAME should have a
+    *.csv* suffix.
 
     If FILENAME is not specified, write_trace_summary() will create one for
     you by appending the suffix *.csv* to the filename of the trace being
@@ -448,7 +447,7 @@ EXPORTS
      use Net::Traces::TSH qw(:all);
 
 VERSION
-    This is "Net::Traces::TSH" version 0.08.
+    This is "Net::Traces::TSH" version 0.09.
 
 SEE ALSO
     The NLANR MOAT Passive Measurement and Analysis (PMA) web site at
